Improved Featured Collection (#268)
* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Improve the image size for each block

* styling added

* Added some styling

* Added text sty;e

* dark mode style

---------

Co-authored-by: shopify[bot] <79544226+shopify[bot]@users.noreply.github.com>

--- a/sections/dev__featured-collection.liquid
+++ b/sections/dev__featured-collection.liquid
@@ -33,14 +33,14 @@
         data-category="{{ block.settings.category | handle }}"
       >
         <div class="featured-collection__card-img {{ block.settings.featured-collection__card-img }}">
-          {%- assign image_url_width = section.settings.image_url_width -%}
-          {%- assign image_tag_width = section.settings.image_tag_width -%}
+          {%- assign image_url_width = block.settings.image_url_width -%}
+          {%- assign image_url_height = block.settings.image_url_height -%}
           <div class="featured-collection__card-img_tag {{ block.settings.featured-collection__card-img_tag }}">
             {% if block.settings.image != blank %}
               {{
                 block.settings.image
-                | image_url: width: image_url_width
-                | image_tag: width: image_tag_width, loading: 'lazy'
+                | image_url: width: image_url_width, height: image_url_height
+                | image_tag: class: block.settings.featured-collection_image_styles
               }}
             {% else %}
               {{ 'image' | placeholder_svg_tag }}
@@ -146,13 +146,13 @@
       "type": "textarea",
       "id": "featured-collection",
       "label": "Collection Style",
-      "default": "w-90 mx-auto p-20 md:my-5 max-md:p-5"
+      "default": "w-90 mx-auto p-20 dark:bg-gray-900 dark:text-white max-md:p-5"
     },
     {
       "type": "textarea",
       "id": "featured-collection__feature-headers",
       "label": "Heading Style",
-      "default": "mb-4 text-4xl font-bold max-md:text-3xl"
+      "default": "mb-4 text-5xl font-bold max-md:text-3xl"
     },
     {
       "type": "textarea",
@@ -164,7 +164,7 @@
       "type": "textarea",
       "id": "featured-collection__view-all-link-section",
       "label": "View All Products Style",
-      "default": "text-purple-700 font-semibold"
+      "default": "text-blue-600 font-bold text-lg"
     },
     {
       "type": "textarea",
@@ -176,13 +176,13 @@
       "type": "textarea",
       "id": "featured-collection__tab-link",
       "label": "Single Category Tab Style",
-      "default": "inline-block px-4 py-2 m-1 border border-gray-300 rounded bg-gray-100 text-sm text-center text-gray-700 transition duration-300 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50 max-md:text-xs max-md:flex-grow max-md:overflow-hidden max-md:whitespace-nowrap max-md:overflow-ellipsis mdmax-:px-2 max-md:py-1"
+      "default": "inline-block px-4 py-2 m-1 border border-gray-300 rounded-full bg-gray-100 text-sm text-center text-gray-700 transition duration-300 hover:bg-gray-300 focus:bg-gray-200 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50 max-md:text-xs max-md:flex-grow max-md:overflow-hidden max-md:whitespace-nowrap max-md:overflow-ellipsis max-md:px-2 max-md:py-1"
     },
     {
       "type": "textarea",
       "id": "featured-collection__product-container",
       "label": "Product Container Style",
-      "default": "flex overflow-x-auto flex-nowrap justify-start items-stretch mx-auto my-0 pb-[30px] [&::-webkit-scrollbar]:h-1 [&::-webkit-scrollbar-track]:bg-gray-300 [&::-webkit-scrollbar-thumb]:bg-gray-700 [&::-webkit-scrollbar-thumb:hover]:bg-gray-900"
+      "default": "flex overflow-x-auto flex-nowrap justify-start items-stretch mx-auto my-0 pb-[30px] [&::-webkit-scrollbar]:h-[2px] [&::-webkit-scrollbar-track]:bg-gray-300 [&::-webkit-scrollbar-thumb]:bg-gray-700 [&::-webkit-scrollbar-thumb:hover]:bg-gray-900"
     }
   ],
   "blocks": [
@@ -239,9 +239,15 @@
         },
         {
           "type": "text",
-          "id": "image_tag_width",
-          "label": "Image Tag width",
+          "id": "image_url_height",
+          "label": "Image URL height",
           "default": "300"
+        },
+        {
+          "type":"textarea",
+          "id": "featured-collection_image_styles",
+          "label": "Block Image Styles",
+          "default": "object-cover"
         },
         {
           "type": "header",
@@ -251,13 +257,13 @@
           "type": "textarea",
           "id": "featured-collection__product-card",
           "label": "Product Card Style",
-          "default": "flex-none w-60 min-w-200 mx-10 shadow-lg rounded-md bg-white text-left relative overflow-hidden"
+          "default": "flex-none w-72 max-md:w-60 min-w-200 mx-10 shadow-lg rounded-[20px] bg-white text-left relative overflow-hidden text-black"
         },
         {
           "type": "textarea",
           "id": "featured-collection__card-img",
           "label": "Card Image Style",
-          "default": "w-240 min-w-200 rounded-lg overflow-hidden relative"
+          "default": "w-240 min-w-200 overflow-hidden relative"
         },
         {
           "type": "textarea",
@@ -269,19 +275,19 @@
           "type": "textarea",
           "id": "featured-collection__deal-tag",
           "label": "Deal Tag Style",
-          "default": "absolute top-2 left-2 bg-yellow-500 text-xs px-2 py-1 rounded font-bold text-gray-700"
+          "default": "absolute top-2 left-2 bg-yellow-500 text-xs px-2 py-1 rounded-full font-extrabold text-white tracking-wider"
         },
         {
           "type": "textarea",
           "id": "featured-collection__category",
           "label": "Category Css Style",
-          "default": "my-3 px-3 py-2 border border-gray-300 rounded-full inline-block uppercase text-xs font-semibold"
+          "default": "my-3 px-3 py-1 ml-1 border-2 border-blue-600 rounded-full inline-block uppercase text-xs font-bold ml-3"
         },
         {
           "type": "text",
           "id": "featured-collection__title",
           "label": "Title Style",
-          "default": "ml-3 text-2xl text-gray-700"
+          "default": "ml-3 text-2xl text-gray-700 font-bold"
         },
         {
           "type": "text",
@@ -293,7 +299,7 @@
           "type": "text",
           "id": "featured-collection__price",
           "label": "Price Style",
-          "default": "ml-3 font-bold text-black"
+          "default": "ml-3 font-bold text-black mb-5 text-xl"
         },
         {
           "type": "text",
