Brought Consistency in theme's Buttons styles (#269)
* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Changes in the footer and contact-form

* Added styling contact-form

* For timeline buttons

* For timeline buttons

* For Rich-text button

---------

Co-authored-by: shopify[bot] <79544226+shopify[bot]@users.noreply.github.com>

--- a/sections/dev__footer.liquid
+++ b/sections/dev__footer.liquid
@@ -125,7 +125,7 @@
       "type": "textarea",
       "id": "footer__main",
       "label": "Style Footer Section",
-      "default": " bg-purple-800 text-white p-8 flex flex-wrap justify-content-between  "
+      "default": "dark:bg-gray-800 dark:text-white p-8 flex flex-wrap justify-content-between border"
     },
     {
       "type": "textarea",
@@ -137,7 +137,7 @@
       "type": "textarea",
       "id": "footer__title",
       "label": "Style Footer Title",
-      "default": "text-2xl font-semibold text-white mb-5 uppercase tracking-wide md:text-center"
+      "default": "text-2xl font-semibold mb-5 uppercase tracking-wide md:text-center"
     },
     {
       "type": "textarea",
@@ -149,13 +149,13 @@
       "type": "textarea",
       "id": "footer__input",
       "label": "Style Footer Input",
-      "default": "p-4 border-none rounded flex-grow-1 text-black"
+      "default": "p-4 border dark:border-none rounded flex-grow-1 text-black"
     },
     {
       "type": "textarea",
       "id": "footer__button",
       "label": "Style Footer Button",
-      "default": " bg-purple-400 text-white border-none p-4 rounded cursor-pointer hover:bg-purple-500"
+      "default": "py-1 px-2 block mx-auto md:py-3 md:px-5 md:w-full text-sm font-medium text-center bg-blue-600 text-white rounded-lg border cursor-pointer bg-blue-700 border-primary-600 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
     }
   ],
   "presets": [
