--- a/sections/dev__timeline.liquid
+++ b/sections/dev__timeline.liquid
@@ -135,7 +135,7 @@
           "type": "textarea",
           "id": "button_style",
           "label": "Button Styling",
-          "default": "inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+          "default": "inline-flex items-center px-4 py-2 text-sm font-medium bg-blue-600 text-white rounded-lg border cursor-pointer bg-blue-700 border-primary-600 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
         }
       ]
     }
