--- a/sections/dev__cards.liquid
+++ b/sections/dev__cards.liquid
@@ -129,7 +129,7 @@
       "type": "textarea",
       "label": "Card Button Styles",
       "id": "card_button_styles",
-      "default": "inline-flex items-center px-2 py-1 md:px-3 md:py-2 text-xs md:text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      "default": "inline-flex items-center px-2 py-1 md:px-3 md:py-2 text-xs md:text-sm font-medium text-center text-white bg-blue-700 border border-primary-600 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
     },
     {
       "type": "textarea",
