--- a/sections/dev__contact-form.liquid
+++ b/sections/dev__contact-form.liquid
@@ -91,13 +91,13 @@
       "type": "textarea",
       "id": "contact",
       "label": "Style Contact Section",
-      "default": "w-full bg-gray-100 py-10 text-center mx-auto"
+      "default": "w-full dark:bg-gray-900 dark:text-white py-10 text-center mx-auto"
     },
     {
       "type": "textarea",
       "id": "contact__style--title",
       "label": "Style Contact Header",
-      "default": "text-2xl md:text-3xl text-gray-800 font-semibold"
+      "default": "text-2xl md:text-4xl font-bold"
     },
     {
       "type": "textarea",
@@ -121,19 +121,19 @@
       "type": "textarea",
       "id": "contact__style--input",
       "label": "Style Contact Input",
-      "default": "w-full px-2 py-1 text-sm md:text-base"
+      "default": "w-full px-2 py-1 text-sm md:text-base border rounded-md bg-gray-50 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
     },
     {
       "type": "textarea",
       "id": "contact__style--textarea",
       "label": "Style Contact Textarea",
-      "default": "w-full px-2 py-1 text-sm md:text-base"
+      "default": "w-full px-2 py-1 text-sm md:text-base border rounded-md bg-gray-50 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
     },
     {
       "type": "textarea",
       "id": "contact__submit-button",
       "label": "Style Submit Button",
-      "default": "bg-purple-900 text-white py-1 md:py-2 px-4 rounded mt-4 cursor-pointer w-full text-sm md:text-base hover:bg-purple-800"
+      "default": "py-1 px-2 block mx-auto md:py-3 md:px-5 md:w-full text-sm font-medium text-center bg-blue-600 text-white rounded-md border cursor-pointer bg-primary-700 border-primary-600 hover:bg-blue-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
     }
   ],
   "presets": [
