--- a/sections/dev__rich-text.liquid
+++ b/sections/dev__rich-text.liquid
@@ -111,8 +111,8 @@
         {
           "type": "textarea",
           "id": "tailwindbutton",
-          "label": "Style Button Container",
-          "default": "inline-flex items-center mt-2 px-3 py-2 text-xs md:text-sm font-medium text-center text-white bg-gray-700 rounded-lg hover:bg-gray-900"
+          "label": "Style Button Container ",
+          "default": "inline-flex items-center mt-2 px-3 py-2 text-xs md:text-sm font-medium text-center bg-blue-600 text-white rounded-lg border cursor-pointer bg-blue-700 border-primary-600 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
         }
       ]
     }
