Enhancing the modal for Email subscriptions and Sign Up (#278)
* Create dev__modal-image.liquid

* did all the changes

* Update dev__modal-image.liquid

* Update dev__modal-image.liquid

* Update dev__modal-image.liquid

* add modal to overlay section

* close modal button handled

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -84,6 +84,7 @@
       {% section 'dev__modal' %}
     {% endif %}
 
+
     {% comment %}
       {% section 'dev__announcement-bar' %}
       {% section 'dev__header' %}
@@ -99,7 +100,7 @@
 
     {% comment %} {% sections 'drawer-group' %} {% endcomment %}
 
-    {% comment %} {% sections 'overlay' %} {% endcomment %}
+    {% sections 'overlay-group' %}
 
     <ul hidden>
       <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
