Improved Cards and Our Teams Cards Design  (#288)
* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Realigned the cards and teams-cards

* Small changes in cards

---------

Co-authored-by: shopify[bot] <79544226+shopify[bot]@users.noreply.github.com>

--- a/sections/dev__card-OurTeam.liquid
+++ b/sections/dev__card-OurTeam.liquid
@@ -94,7 +94,7 @@
       "type": "textarea",
       "label": "Card Section Styles",
       "id": "card__main",
-      "default": "bg-gray-900 py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6"
+      "default": "bg-gray-900 py-8 px-4 mx-auto lg:py-16 lg:px-6"
     },
     {
       "type": "textarea",
@@ -182,7 +182,7 @@
           "type": "textarea",
           "label": "Card Block Styling",
           "id": "card__block_maindiv",
-          "default": "items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 m-6 "
+          "default": "items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 m-6 2xl:mx-36"
         },
         {
           "type": "textarea",
