--- a/sections/dev__cards.liquid
+++ b/sections/dev__cards.liquid
@@ -87,7 +87,7 @@
       "type": "textarea",
       "label": "Card Container Styles",
       "id": "card_container_styles",
-      "default": "flex flex-wrap justify-center gap-4 px-4"
+      "default": "flex flex-wrap justify-center px-4 py-4 gap-4 2xl:gap-0"
     },
     {
       "type": "textarea",
@@ -99,7 +99,7 @@
       "type": "textarea",
       "label": "Card Styles",
       "id": "card_styles",
-      "default": "max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+      "default": "max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 2xl:mt-5 2xl:mx-24"
     },
     {
       "type": "textarea",
