--- a/sections/dev__header.liquid
+++ b/sections/dev__header.liquid
@@ -70,6 +70,19 @@
         {% render 'icon-cart' %}
       </a>
     {% endif %}
+    {% if shop.customer_accounts_enabled %}
+      {% if customer %}
+        <a href="{{ routes.account_url }}" class="text-base text-gray-500 hover:text-gray-900">account</a>
+        {{ 'Log out' | customer_logout_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
+      {% else %}
+        {{ 'Log in ' | customer_login_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
+        {{
+          'Register'
+          | customer_register_link
+          | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"'
+        }}
+      {% endif %}
+    {% endif %}
   </div>
 </header>
 
