--- a/sections/dev__header.liquid
+++ b/sections/dev__header.liquid
@@ -66,7 +66,7 @@
       </a>
     {% endif %}
     {% if section.settings.cart == true %}
-      <a href="#">
+      <a href="{{ routes.cart_url }}">
         {% render 'icon-cart' %}
       </a>
     {% endif %}
