--- a/snippets/icon-hamburger.liquid
+++ b/snippets/icon-hamburger.liquid
@@ -1,8 +1,5 @@
-<svg 
-    class="icon icon-hamburger" 
-    xmlns="http://www.w3.org/2000/svg" 
-    viewBox="0 0 20 20"
-    fill="none"
->
-    <path fill="currentColor" fill-rule="evenodd" d="M17.543 6.2H2.1a1.032 1.032 0 0 1-1.029-1.029c0-.566.463-1.029 1.029-1.029h15.443c.566 0 1.029.463 1.029 1.029 0 .566-.463 1.029-1.029 1.029zm0 4.829H2.1A1.032 1.032 0 0 1 1.071 10c0-.566.463-1.029 1.029-1.029h15.443c.566 0 1.029.463 1.029 1.029 0 .566-.463 1.029-1.029 1.029zm0 4.828H2.1a1.032 1.032 0 0 1-1.029-1.029c0-.566.463-1.029 1.029-1.029h15.443c.566 0 1.029.463 1.029 1.029 0 .566-.463 1.029-1.029 1.029z"/>
-</svg>
+<svg viewBox="0 0 100 80" width="40" height="40">
+    <rect width="60" height="10" rx="10"></rect>
+    <rect y="20" width="60" height="10" rx="10"></rect>
+    <rect y="40" width="60" height="10" rx="10"></rect>
+  </svg>
